# trezu

./: .dockerignore  .env.example  .gitignore  README.md  dist-workspace.toml  flake.nix  justfile  release-plz.toml  render.yaml
.devcontainer/: devcontainer.json  post-create.sh  run-agent.sh
.github/: copilot-instructions.md
.github/workflows/: backend-tests.yml  cli-release.yml  cut-release.yml  frontend-build.yml  frontend-e2e.yml  release-plz.yml
.next/: trace  trace-build
.next/cache/: config.json
cli/: README.md  package-lock.json  package.json
cli/create-treasury/: README.md  package-lock.json  package.json
cli/src/: index.ts
contracts/bulk-payment/: Cargo.toml
contracts/confidential-bulk-payment/: Cargo.toml
docs/: ADDRESS_BOOK.md  ANALYTICS_EVENTS.md  confidential-treasury.md  sponsor-call-pairs-and-gap-filling.md
docs/implementation-plans/: goldsky.md  recent-transactions-monitor.md
e2e-tests/bulk-payment/: dao-bulk-payment-flow.js
e2e-tests/cli/: README.md  cli-e2e.js  package.json
goldsky/pipelines/: near-execution-outcomes.yaml  near-receipts.yaml  near-transactions.yaml
goldsky/scripts/: check-status.sh  deploy.sh
nt-be/: .env.example  Cargo.toml  README.md
nt-be/.sqlx/: query-09167e480bc3123777af345c030d8fac0aed9f4de50c9c7d3e358bd667003e4e.json  query-0a0a64b326cb7beea6c2d93c4df8498d52eb9369704059c0b27773c54ac91717.json  query-0a3bc0659b8706ee5d83c0b54636a7b935b4cf773d6e14da109a13934bf22581.json  query-0d9e52ebdd5ff1ad5eaf8f61d5b9d953c9256f6345555e359cc05cfbeface735.json  query-0f626ab6b820dc62cbd7057935182936ba2aaba7b361bd3a332bee14e329a867.json  query-114798fe7fa31c560f1ea58ae7721feb8531404a63681248f274daad1da0cca3.json  (+99 more)
nt-be/data/: tokens.json
nt-be/src/: app_state.rs  (+1 more)
nt-cli/: Cargo.toml
nt-cli/src/: api.rs  config.rs  main.rs  relay.rs  types.rs
nt-cli/src/address_book/: mod.rs
nt-cli/src/assets/: mod.rs
nt-cli/src/auth/: mod.rs
nt-cli/src/members/: mod.rs
nt-cli/src/payments/: mod.rs
nt-cli/src/requests/: mod.rs
nt-cli/src/treasury/: mod.rs
nt-cli/wix/: main.wxs
nt-fe/: .gitignore  README.md  accounts.txt  active.txt  all-treasuries.txt  build-ledger.mjs  components.json  docker-compose.e2e.yml  esbuild-shims.js  instrumentation-client.ts  next.config.ts  nt.txt  package.json  playwright.config.ts  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  sinceFeb26.txt  users-tr-sinceFeb26.txt  users-tr.txt
sandbox/: Dockerfile  supervisord.conf
sandbox/sandbox-init/: Cargo.toml
sandbox/sandbox-init/src/: main.rs  mock_server.rs
(+672 files in other folders)
