[package]
name = "trezu"
version = "0.1.0"
edition = "2024"
resolver = "3"
description = "Trezu CLI - Treasury management for NEAR Protocol"

[[bin]]
name = "trezu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
interactive-clap = "0.3"
interactive-clap-derive = "0.3"
inquire = "0.9.3"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

tokio = { version = "1.0", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json", "cookies", "blocking"] }
color-eyre = "0.6"
shell-words = "1.0.0"
prettytable = "0.10.0"

near-crypto = "0.35"
near-primitives = "0.35"
near-cli-rs = { git = "https://github.com/near/near-cli-rs", branch = "refactor/allow-custom-send-delegate-action", default-features = false }

dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
borsh = "1.5"
sha2 = "0.10"
near-account-id = "2.0"
near-token = "0.3"
serde_with = "3"
bigdecimal = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
colored = "3"
tracing = "0.1"
tracing-indicatif = "0.3.6"

[features]
default = ["ledger"]
ledger = ["near-cli-rs/ledger"]
