[package]
name = "sandbox-init"
description = "NEAR Sandbox initializer for Treasury test environment"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sandbox-init"
path = "src/main.rs"

[dependencies]
# NEAR Sandbox
near-sandbox = "0.3.6"
near-api = "0.7.8"
near-gas = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for fetching contracts from mainnet
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 decoding
base64 = "0.22"

# WAT → WASM compilation (for mock contracts)
wat = "1"

# HTTP server for mock APIs and test helpers
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# NEAR crypto for delegate action signing
borsh = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
sha2 = "0.10"
hmac = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
futures = "0.3"
rand = "0.8"
hex = "0.4"
chrono = "0.4"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
